--- a/frontend/day_14_15/login.html
+++ b/frontend/day_14_15/login.html
@@ -8,3 +8,32 @@
     -loginPassword: should not be empty
 
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+</head>
+<body>
+    <div class="login-form">
+        <h1>Login Form</h1>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="loginUsername">Username</label>
+                <input type="text" id="loginUsername" class="loginUsername">
+                <div id="loginUsername-error" class="form-group error"></div>
+            </div>
+            <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input type="password" id="loginPassword" name="loginPassword">
+                <div id="loginPassword-error" class="form-group error"></div>
+            </div>
+            <button type="submit" class="submit-button">Submit</button>
+            <div id="success-message" class="success-message" style="display: none">Login Successfull!</div>
+        </form>
+    </div>
+    <script src="./js/validation.js">login()</script>
+    
+</body>
+</html>
